<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >

    <ImageView
        android:id="@+id/login_applogo"
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        />

    <EditText
        android:id="@+id/login_phone_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:padding="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/phone_text"
        android:inputType="number"
        android:textColor="@color/loginText"
        android:textColorHint="@color/loginText"
        android:textSize="17sp"
        android:textStyle="italic"
        android:background="@drawable/input_design"
        />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_phone_input"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="20dp"
        android:inputType="textWebPassword"
        android:padding="20dp"
        android:hint="@string/pass_text"
        android:textColor="@color/loginText"
        android:textColorHint="@color/loginText"
        android:textSize="17sp"
        android:textStyle="italic"
        android:background="@drawable/input_design"
        />


    <TextView
        android:id="@+id/forget_password_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_input"
        android:text="@string/forget_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="22dp"
        />

    <CheckBox
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="360dp"
        android:layout_marginTop="330dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_input"
        android:text="Se souvenir de moi"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="240dp"
        />



    <Button
        android:id="@+id/confirmlogin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remember"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/loginbutton"
        android:padding="17dp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:text="@string/confirmlogin_text"
        android:textColor="@color/loginText"
        />

    <TextView
        android:id="@+id/admin_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adminMode_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="1dp"
        />
         <TextView
        android:id="@+id/notadmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Je ne suis pas un admin"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="220dp"
        android:visibility="invisible"

        />










</RelativeLayout>