<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!--<ImageView
        android:id="@+id/app_logo"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:src="@drawable/applogo" />
-->
    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="5dp"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="@color/colorSlogan"
        android:textSize="23sp"
        android:textStyle="italic"
        />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:text="@string/login_text"
        android:textColor="@color/loginText"
        />

    <Button
        android:id="@+id/join_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_btn"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:text="@string/join_text"
        android:textColor="@color/loginText"
        />

    <ImageView
        android:id="@+id/imag_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/welcome"
        android:layout_marginTop="120dp"

        />








</RelativeLayout>
